Fix crash when leaving block select mode

BUG: 177905

svn path=/trunk/KDE/kdelibs/kate/; revision=897671